src/core/config/transformer/snapshots/tailcall__core__config__transformer__apollo_federation_subgraph__tests__extractor__extract_graphql.snap
---
source: src/core/config/transformer/apollo_federation_subgraph.rs
expression: keys
---
Valid(
    Ok(
        Some(
            "header_test input { key }",
        ),
    ),
)
